# LilyGo-EPD-4-7-OWM-Weather-Display

./: .clang-format  .gitattributes  .gitignore  .prettierrc  CONTRIBUTING.md  HISTORY.md  LilyGo-EPD-4-7-OWM-Weather-Display.ino  README.md  biome.json  cliff.toml  index.js  package-lock.json  package.json  platformio.ini
.ai/: instructions.md
.github/workflows/: compile-check.yml  lint.yml  pages.yml  release.yml  simulator-build.yml
docs/: index.html
include/: config.h  config_html.h  defaults.h  display.h  forecast_record.h  icons.h  owm_credentials.h.example  power.h  setup_portal.h  setup_screen.h  weather_api.h
include/fonts/: opensans10.h  opensans10b.h  opensans11.h  opensans11b.h  opensans12.h  opensans12b.h  opensans13.h  opensans13b.h  opensans14.h  opensans14b.h  opensans15.h  opensans16.h  opensans16b.h  opensans18.h  opensans18b.h  opensans20.h  opensans20b.h  opensans24.h  opensans24b.h  opensans26.h  opensans26b.h  opensans6.h  opensans8.h  opensans8b.h  opensans9.h  opensans9b.h
include/images/: sunset.h
include/translations/: lang_en.h  lang_fr.h
scripts/: embed_html.py  gen_build_info.py  merge_binary.py  screenshot.js
simulator/: .env.example  CMakeLists.txt  main_pc.cpp  main_wasm.cpp  owm_http.cpp  owm_http.h  pc_stubs.h  simulator_stubs.h
simulator/epdiy_pc/: epdiy.c  epdiy_pc.h  font.c
simulator/esp_stubs/: Arduino.h  epdiy.h  esp_attr.h  esp_err.h  qrcode.h
simulator/esp_stubs/xtensa/: core-macros.h
simulator/miniz/: miniz_export.h
src/: config.cpp  display.cpp  icons.cpp  main.cpp  power.cpp  setup_portal.cpp  setup_screen.cpp  weather_api.cpp
web/: config.html  display.html  update.html
